UtahLiveDataTest/src/objects/PaymentFINETCode__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AwardFINETCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award FINET Code</label>
        <referenceTo>AwardFINETCode__c</referenceTo>
        <relationshipLabel>Payment FINET Codes</relationshipLabel>
        <relationshipName>Payment_FINET_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Phase__c</fullName>
        <description>Grants API Document Phase</description>
        <label>Grants API Document Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grants_API_Document_Status__c</fullName>
        <description>Grants API Document Status</description>
        <label>Grants API Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Grants_API_Document_Phase__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Held</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HideEdit__c</fullName>
        <formula>OR(ISPICKVAL(PaymentRequest__r.Status__c,&apos;Approved&apos;),ISPICKVAL(PaymentRequest__r.Status__c,&apos;Paid&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Code</label>
        <referenceTo>r_obj__c</referenceTo>
        <relationshipLabel>Payment FINET Codes</relationshipLabel>
        <relationshipName>Payment_FINET_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OneTwelveCatchUpAmount__c</fullName>
        <label>OneTwelveCatchUpAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OneTwelvePaymentAmount__c</fullName>
        <label>OneTwelvePaymentAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentRequest__c</fullName>
        <label>Payment Request</label>
        <referenceTo>PaymentRequest__c</referenceTo>
        <relationshipLabel>Payment FINET Codes</relationshipLabel>
        <relationshipName>Payment_FINET_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProgramCode__c</fullName>
        <label>Program Code</label>
        <referenceTo>r_prog__c</referenceTo>
        <relationshipLabel>Payment FINET Codes</relationshipLabel>
        <relationshipName>Payment_FINET_Codes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RemainingAmount__c</fullName>
        <formula>Amount__c - SpentAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequestedAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SpentAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Spent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Payment FINET Code</label>
    <nameField>
        <label>Payment FINET Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment FINET Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RemainingBalanceNotNegative</fullName>
        <active>true</active>
        <errorConditionFormula>RemainingAmount__c &lt; 0</errorConditionFormula>
        <errorMessage>Remaining Balance Must Not be Negative</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequestedAmountLessThanRemainingAmount</fullName>
        <active>true</active>
        <errorConditionFormula>RequestedAmount__c &gt; RemainingAmount__c</errorConditionFormula>
        <errorMessage>Requested Amount Must be Less Than Remaining Amount</errorMessage>
    </validationRules>
</CustomObject>